fix(UI): Prevent not visible items from rendering in list view

--- a/app/src/ui/components/MemoList/MemoList.css
+++ b/app/src/ui/components/MemoList/MemoList.css
@@ -60,6 +60,8 @@
     height: 100%;
     max-height: var(--item-max-height);
     container: memo / inline-size;
+    content-visibility: auto;
+    contain-intrinsic-size: var(--item-max-height);
 
     @container (width >= 768px) {
         @apply border-b-0 border-s px-4;
